mengintegrasikan auth register dengan send email
